tests/snapshots/run_wpt_conformance__onnx_reduceSumSquare_float32_1D_tensor_all_positive_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_sum_square.https.any.js",
    "reduceSumSquare float32 1D tensor all positive default options",
    "onnx",
    "PASS",
)
